--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -52,9 +52,9 @@ body {
 }
 </style>
 
-<div ng-cloak ng-if="$root.auth" class="container">
+<div ng-cloak class="container">
 
-    <div id="chat" class="row" style="position:fixed;top:0px;right:0px;left:0px;bottom:50px;overflow-y:scroll" >
+    <div id="chat" class="row" style="position:fixed;top:0px;right:0px;left:0px;bottom:{{inputHeight()+10}}px;overflow-y: scroll;-webkit-overflow-scrolling: touch;" >
         <div class="col-xs-12" style="height:400px;"></div>
         <div class="col-xs-12" ng-repeat="msg in chatCtrl.messages track by msg._id">
             <div ng-class="{ 'pull-left': !msg.me, 'pull-right': msg.me }">
@@ -67,36 +67,35 @@ body {
         </div>
     </div>
 
-    <div class="row" style="position:fixed;height:45px;right:0px;left:0px;bottom:2px;">
+    <div id="input" class="row" style="position:fixed;right:0px;left:0px;bottom:2px;">
         <div class="col-xs-12">
             <form ng-submit="chatCtrl.post(text); text='';" autocomplete="off">
-            <div class="input-group">
-                <span class="input-group-btn dropup">
-                    <button class="btn btn-lg btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <button class="btn btn-lg btn-default" type="button" ng-click="chatCtrl.selectPhoto()">
-                        <i class="fa fa-camera" aria-hidden="true"></i>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#" ng-click="chatCtrl.disconnect()"><i class="fa fa-user-times" aria-hidden="true"></i> Disconnect</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#" ng-click="chatCtrl.deleteAll()"><i class="fa fa-times"></i> Delete all</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#" ng-click="chatCtrl.load()"><i class="fa fa-refresh" ng-class="{'fa-spin':chatCtrl.loading}"></i> Refresh</a></li>
-                    </ul>
+            <div class="input-group dropup" style="position:relative">
+                <span class="input-group-addon btn btn-default" style="font-size:125%" data-toggle="dropdown">
+                    <i class="fa fa-bars"></i>
                 </span>
-
-                <input type="text" autocomplete="off" ng-model="text" class="form-control input-lg" placeholder="Type text...">
-
-                <span class="input-group-btn">
-                    <button class="btn btn-lg" ng-class="{ 'btn-success': !$root.auth, 'btn-primary':$root.auth }" type="submit">
-                        <i ng-hide="chatCtrl.loading" class="fa fa-arrow-circle-up" ></i>
-                        <i ng-show="chatCtrl.loading" class="fa fa-refresh fa-spin"></i>
-                    </button>
+                <span class="input-group-addon btn btn-primary" style="font-size:125%" ng-click="chatCtrl.selectPhoto()">
+                    <i class="fa fa-camera"></i>
                 </span>
+                <ul class="dropdown-menu">
+                    <li><a href="#" ng-click="chatCtrl.disconnect()"><i class="fa fa-user-times" aria-hidden="true"></i> Disconnect</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#" ng-click="chatCtrl.deleteAll()"><i class="fa fa-times"></i> Delete all</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#" ng-click="chatCtrl.load()"><i class="fa fa-refresh" ng-class="{'fa-spin':chatCtrl.loading}"></i> Refresh</a></li>
+                </ul>
+
+                <button id="post" class="btn btn-primary" style="position:absolute;bottom:5px;right:5px;border-radius:20px;z-index:100" type="button" onmousedown="window.keepFocus=true" ng-click="chatCtrl.post(text); text='';">
+                    <i ng-hide="chatCtrl.loading" class="fa fa-arrow-circle-up" ></i>
+                    <i ng-show="chatCtrl.loading" class="fa fa-refresh fa-spin"></i>
+                </button>
+
+                <textarea autocomplete="off" style="height:{{inputHeight()}}px" rows="1"  ng-model="text" class="form-control input-lg" onfocus="window.keepFocus=null" onblur="if(window.keepFocus) { event.target.focus(); } window.keepFocus=null;" placeholder="Type text..."></textarea>
+
             </div><!-- /input-group -->
+
+
             </form>
         </div><!-- /.col-lg-6 -->
     </div>
