--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -64,11 +64,28 @@ body {
 
 <div ng-cloak class="container">
 
-    <div id="chat" class="row" style="position:fixed;top:0px;right:0px;left:0px;bottom:{{inputHeight()+10}}px;overflow-y: scroll;-webkit-overflow-scrolling: touch;" >
+    <div id="chat" class="row" style="position:fixed;top:0px;right:0px;left:0px;bottom:90px;overflow-y: scroll;-webkit-overflow-scrolling: touch;" >
         <div class="col-xs-12" style="height:400px;"></div>
         <div class="col-xs-12" ng-repeat="msg in chatCtrl.messages track by msg._id">
-            <bubble message="msg"></bubble>
-            <div ng-if="msg.me!=chatCtrl.messages[$index+1].me || (msg.date|moment:'calendar')!=(chatCtrl.messages[$index+1].date|moment:'calendar')" class="time-tag"  ng-class="{ me: msg.me }">{{msg.date|moment:'calendar'}}</div>
+
+            <div class="bubble {{::msg.type}}" ng-class="::{ me: msg.me }">
+                <span ng-switch="::msg.type">
+                    <span ng-switch-when="image">
+                        <a ng-href="{{::msg.text}}" target="pic">
+                            <img ng-src="{{::msg.text}}">
+                        </a>
+                    </span>
+                    <span ng-switch-when="video">
+                        <video controls>
+                            <source ng-src="{{::msg.text}}">
+                        </video>
+                    </span>
+                    <span ng-switch-default ng-bind-html="::chatCtrl.toHtml(msg.text)"></span>
+                </span>
+
+            </div>
+
+            <div ng-if="msg.me!=chatCtrl.messages[$index+1].me || (msg.date|moment:'calendar')!=(chatCtrl.messages[$index+1].date|moment:'calendar')" class="time-tag"  ng-class="::{ me: msg.me }">{{::msg.date|moment:'calendar'}}</div>
         </div>
     </div>
 
@@ -76,30 +93,36 @@ body {
         <div class="col-xs-12">
             <form ng-submit="chatCtrl.post(text); text='';" autocomplete="off">
             <div class="input-group dropup" style="position:relative">
-                <span class="input-group-addon btn btn-default" style="font-size:125%" data-toggle="dropdown">
-                    <i class="fa fa-bars"></i>
+                <span class="input-group-addon" style="padding:0px;">
+                    <div class="btn-group-vertical btn-group-sm">
+                        <button class="btn btn-link" style="font-size:125%" ng-click="chatCtrl.selectPhoto()">
+                            <i class="fa fa-fw fa-camera"></i>
+                        </button>
+
+                        <button class="btn btn-link" style="font-size:125%" data-toggle="dropdown">
+                            <i class="fa fa-fw fa-bars"></i>
+                        </button>
+
+                        <ul class="dropdown-menu">
+                            <li><a href="#" ng-click="chatCtrl.disconnect()"><i class="fa fa-user-times" aria-hidden="true"></i> Disconnect</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#" ng-click="chatCtrl.deleteAll()"><i class="fa fa-times"></i> Delete all</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#" ng-click="chatCtrl.load()"><i class="fa fa-refresh" ng-class="{'fa-spin':chatCtrl.loading}"></i> Refresh</a></li>
+                        </ul>
+                    </div>
                 </span>
-                <span class="input-group-addon btn btn-primary" style="font-size:125%" ng-click="chatCtrl.selectPhoto()">
-                    <i class="fa fa-camera"></i>
+
+                <textarea autocomplete="off" rows="3" style="padding:2px"  ng-model="text" class="form-control input-lg" onfocus="window.keepFocus=null" onblur="if(window.keepFocus) { event.target.focus(); } window.keepFocus=null;" placeholder="Last refresh {{(date|moment:'format':'H:mm:ss')||'never'}}"></textarea>
+
+                <span class="input-group-addon" style="padding:0px;">
+                    <button class="btn btn-link" style="font-size:200%;padding-left:6px;padding-right:6px" onmousedown="window.keepFocus=true" ng-click="chatCtrl.post(text); text='';">
+                        <i ng-hide="chatCtrl.loading" class="fa fa-fw fa-arrow-circle-up" ></i>
+                        <i ng-show="chatCtrl.loading" class="fa fa-fw fa-refresh fa-spin"></i>
+                    </button>
                 </span>
-                <ul class="dropdown-menu">
-                    <li><a href="#" ng-click="chatCtrl.disconnect()"><i class="fa fa-user-times" aria-hidden="true"></i> Disconnect</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#" ng-click="chatCtrl.deleteAll()"><i class="fa fa-times"></i> Delete all</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#" ng-click="chatCtrl.load()"><i class="fa fa-refresh" ng-class="{'fa-spin':chatCtrl.loading}"></i> Refresh</a></li>
-                </ul>
-
-                <button id="post" class="btn btn-primary" style="position:absolute;bottom:5px;right:5px;border-radius:20px;z-index:100" type="button" onmousedown="window.keepFocus=true" ng-click="chatCtrl.post(text); text='';">
-                    <i ng-hide="chatCtrl.loading" class="fa fa-arrow-circle-up" ></i>
-                    <i ng-show="chatCtrl.loading" class="fa fa-refresh fa-spin"></i>
-                </button>
-
-                <textarea autocomplete="off" style="height:{{inputHeight()}}px" rows="1"  ng-model="text" class="form-control input-lg" onfocus="window.keepFocus=null" onblur="if(window.keepFocus) { event.target.focus(); } window.keepFocus=null;" placeholder="Last refresh {{(date|moment:'format':'H:mm:ss')||'never'}}"></textarea>
-
             </div><!-- /input-group -->
-
 
             </form>
         </div><!-- /.col-lg-6 -->
