--- a/app/views/chat.html
+++ b/app/views/chat.html
@@ -132,10 +132,13 @@ body {
                         <li role="separator" class="divider"></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#" ng-click="chatCtrl.load()"><i class="fa fa-refresh" ng-class="{'fa-spin':loading}"></i> Refresh</a></li>
-                        <li><a href="#" ng-click="chatCtrl.limit = chatCtrl.limit ? 0 : 75">
+                        <li>
+                            <a href="#" >
                                 <i ng-hide="chatCtrl.limit" class="fa fa-square-o"></i>
-                                <i ng-show="chatCtrl.limit" class="fa fa-check-square-o"></i> Limit
+                                <i ng-show="chatCtrl.limit" class="fa fa-check-square-o" ng-click="chatCtrl.limit=undefined"></i> Limit
+                                <input type="number" ng-model="chatCtrl.limit" style="width: 75px">
                             </a>
+                            
                         </li>
                     </ul>
                 </div>
